--- a/src/Palette.css
+++ b/src/Palette.css
@@ -4,5 +4,20 @@
 }
 
 .Palette-colors {
-  height: 90%;
+  height: 87%;
+}
+
+.palette-footer {
+  background-color: #fff;
+  height: 5vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-weight: bold;
+  padding: 0 1rem;
+}
+
+.emoji {
+  font-size: 1.5rem;
+  margin: 0 1rem;
 }
