--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -8,7 +8,8 @@
   margin-bottom: -3.5px;
 }
 
-.copy-button {
+.copy-button,
+.back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -24,6 +25,10 @@
   line-height: 30px;
   color: #fff;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+.copy-button {
   opacity: 0;
 }
 
@@ -110,4 +115,12 @@
 
 .copy-msg p {
   font-size: 2rem;
+}
+
+.SingleColorPalette .ColorBox {
+  height: 50%;
+}
+
+.ColorBox.go-back {
+  background-color: black;
 }
