--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
   width: 20%;
   height: 25%;
   margin: 0 auto;
@@ -6,7 +6,7 @@
   position: relative;
   cursor: pointer;
   margin-bottom: -3.5px;
-}
+} */
 
 .copy-button,
 .back-button {
@@ -47,6 +47,14 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.light-text {
+  color: white;
+}
+
+.ColorBox .dark-text {
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .see-more {
