--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -8,7 +8,7 @@
   margin-bottom: -3.5px;
 } */
 
-.copy-button,
+/* .copy-button,
 .back-button {
   width: 100px;
   height: 30px;
@@ -26,18 +26,18 @@
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
-}
+} */
 
-.copy-button {
+/* .copy-button {
   opacity: 0;
-}
+} */
 
 .ColorBox:hover .copy-button {
   opacity: 1;
   transition: 0.6s;
 }
 
-.box-content {
+/* .box-content {
   position: absolute;
   width: 100%;
   left: 0px;
@@ -47,17 +47,17 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 12px;
-}
+} */
 
-.light-text {
+/* .light-text {
   color: white;
 }
 
 .ColorBox .dark-text {
   color: rgba(0, 0, 0, 0.6);
-}
+} */
 
-.see-more {
+/* .see-more {
   background-color: rgba(255, 255, 255, 0.3);
   position: absolute;
   border: none;
@@ -68,9 +68,9 @@
   height: 30px;
   text-align: center;
   line-height: 30px;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
   opacity: 0;
   z-index: 0;
   width: 100%;
@@ -84,9 +84,9 @@
   transform: scale(50);
   z-index: 10;
   position: absolute;
-}
+} */
 
-.copy-msg {
+/* .copy-msg {
   position: fixed;
   left: 0;
   right: 0;
@@ -100,17 +100,17 @@
   transform: scale(0.1);
   opacity: 0;
   color: white;
-}
+} */
 
-.copy-msg.show {
+/* .copy-msg.show {
   opacity: 1;
   transform: scale(1);
   z-index: 25;
   transition: all 0.3s ease-in-out;
   transition-delay: 0.1s;
-}
+} */
 
-.copy-msg h1 {
+/* .copy-msg h1 {
   font-weight: 400;
   text-shadow: 1px 2px black;
   background: rgba(255, 255, 255, 0.3);
@@ -123,12 +123,12 @@
 
 .copy-msg p {
   font-size: 2rem;
-}
+} */
 
-.SingleColorPalette .ColorBox {
+/* .SingleColorPalette .ColorBox {
   height: 50%;
-}
-
+} */
+/* 
 .ColorBox.go-back {
   background-color: black;
-}
+} */
