--- a/src/Palette.css
+++ b/src/Palette.css
@@ -1,13 +1,13 @@
-.Palette {
+/* .Palette {
   height: 100vh;
   overflow: hidden;
-}
+} */
 
-.Palette-colors {
+/* .Palette-colors {
   height: 87%;
-}
+} */
 
-.palette-footer {
+/* .palette-footer {
   background-color: #fff;
   height: 5vh;
   display: flex;
@@ -20,4 +20,4 @@
 .emoji {
   font-size: 1.5rem;
   margin: 0 1rem;
-}
+} */
